--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.2.0",
+    "broccoli-coffee": "^0.1.0",
     "broccoli-ember-hbs-template-compiler": "^1.5.0",
     "broccoli-sass": "^0.1.4",
     "ember-cli": "0.0.28",
