--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.2.0",
     "broccoli-coffee": "^0.1.0",
     "broccoli-ember-hbs-template-compiler": "^1.5.0",
+    "broccoli-emblem-compiler": "^0.3.16",
     "broccoli-sass": "^0.1.4",
     "ember-cli": "0.0.28",
     "express": "^4.1.1",
