--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.1",
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.1",
-
+    
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
     "ember": "1.5.1",
@@ -12,6 +12,7 @@
     "ember-resolver": "stefanpenner/ember-jj-abrams-resolver#master",
     "ic-ajax": "~1.x",
     "bourbon": "~3.1.8",
+    "normalize-css": "~3.0.1",
 
     "qunit": "~1.12.0",
     "ember-qunit": "https://github.com/WMeldon/ember-qunit.git#mocha",
