--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "ember-qunit": "https://github.com/WMeldon/ember-qunit.git#mocha",
     "mocha": "~1.17.0",
     "chai": "~0.3.1",
-    "sinon": "~1.10.0",
+    "sinonjs-built": "~1.7.3",
     "sinon-chai": "~2.5.0",
     "ember-mocha-adapter": "https://github.com/WMeldon/ember-mocha-adapter.git#qunit"
   }
