--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "broccoli-ember-hbs-template-compiler": "^1.5.0",
     "broccoli-emblem-compiler": "^0.3.16",
     "broccoli-sass": "^0.1.4",
-    "ember-cli": "0.0.34",
+    "ember-cli": "0.0.40",
+    "ember-cli-ember-data": "0.1.0",
+    "ember-cli-ic-ajax": "0.1.1",
     "express": "^4.1.1",
     "glob": "^3.2.9",
     "loom-generators-ember-appkit": "^1.1.1",
     "originate": "0.1.5",
-    "broccoli-merge-trees": "^0.1.3",
+    "broccoli-merge-trees": "^0.1.4",
     "broccoli-static-compiler": "^0.1.4",
+    "broccoli-asset-rev": "0.0.17",
 
     "pkgcloud": "^0.9.6",
-    "glob": "^4.0.3",
     "request": "2.36.0"
   }
 }
