--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-ic-ajax": "0.1.1",
     "express": "^4.1.1",
     "glob": "^3.2.9",
+    "liquid-fire": "^0.8.4",
     "loom-generators-ember-appkit": "^1.1.1",
     "originate": "0.1.5",
     "pkgcloud": "^0.9.6",
